<resources>
    <string name="app_name">Exercise 11 Android Integration with Web Services</string>
    <string name="set_background_image">Set background image</string>
    <string name="download_using_glide">Download using Glide</string>
    <string name="download_using_http">Download using HTTP</string>
    <string name="create_a_list_by_parsing_below_url">Create a list by parsing below url</string>
    <string name="retrofit">Retrofit</string>
    <string name="http">HTTP</string>
    <string name="name">name</string>
    <string name="message">message</string>
</resources>
