<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="119dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/set_background_image"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/glide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_margin="10dp"
        android:background="@drawable/button_background"
        android:maxWidth="200dp"
        android:maxHeight="200dp"
        android:minWidth="200dp"
        android:minHeight="50dp"
        android:onClick="downloadImageGlide"
        android:padding="20dp"
        android:text="@string/download_using_glide"
        android:textColor="#2196F3" />

    <Button
        android:id="@+id/httpImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_margin="10dp"
        android:layout_toEndOf="@+id/glide"
        android:background="@drawable/button_background"
        android:maxWidth="200dp"
        android:maxHeight="200dp"
        android:minWidth="200dp"
        android:minHeight="50dp"
        android:onClick="downloadImageHttpApi"
        android:padding="20dp"
        android:text="@string/download_using_http"
        android:textColor="#2196F3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/glide"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/create_a_list_by_parsing_below_url"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/retrofit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_margin="10dp"
        android:background="@drawable/button_background"
        android:onClick="downloadListUsingRetroFit"
        android:maxWidth="200dp"
        android:maxHeight="200dp"
        android:minWidth="200dp"
        android:minHeight="50dp"
        android:padding="20dp"
        android:text="@string/retrofit"
        android:textColor="#2196F3" />

    <Button
        android:id="@+id/http"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_margin="10dp"
        android:layout_toEndOf="@+id/retrofit"
        android:background="@drawable/button_background"
        android:maxWidth="200dp"
        android:maxHeight="200dp"
        android:minWidth="200dp"
        android:minHeight="50dp"
        android:onClick="downloadListUsingHttpApi"
        android:padding="20dp"
        android:text="@string/http"
        android:textColor="#2196F3" />


</RelativeLayout>